# phonon-to-json

./: .gitignore  pyproject.toml
cli/: phonon_to_json_main.py
src/phonon_to_json/: lattice.py  phonon_to_json.py
tests/: test_script.py
