[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "phonon-to-json"
version = "0.0.14"
dependencies = [
  "numpy",
  "spglib",
  "castep_outputs"
]
authors = [
  { name="Kit Brown", email="kit.daniel.brown@gmail.com" },
]
description = "Package for converting CASTEP .phonon files to .json files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
phonon_to_json = "phonon_to_json.cli.phonon_to_json_main:main"
